--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
-    "@modelcontextprotocol/sdk": "^0.5.0"
+    "@google/genai": "^1.30.0",
+    "@modelcontextprotocol/sdk": "^1.22.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
